--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.4.1"
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.4.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
     "hanzi-writer": "^3.5.0"
