--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.6.0",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.4.1",
     "postcss": "^8.4.21",
